--- a/dthesis_template/main.tex
+++ b/dthesis_template/main.tex
@@ -26,6 +26,7 @@
 \input{inputs/Selftrig}
 \input{inputs/Exttrig}
 \input{inputs/Conclusion}
+\input{inputs/Conclusion2}
 
 \input{inputs/Acknowledgement}
 
