--- a/dthesis_template/inputs/Setup.tex
+++ b/dthesis_template/inputs/Setup.tex
@@ -14,7 +14,7 @@
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=12cm]{./figure/Setupcab.png}
+  \includegraphics[width=12cm]{./figure/selfsetupcab.png}
   \caption{セットアップの配線図}
   \label{fig:setupcab}
 \end{figure}
