--- a/dthesis_template/bib/IOPEXPORT_BIB.bib
+++ b/dthesis_template/bib/IOPEXPORT_BIB.bib
@@ -39,6 +39,36 @@ Collider begins operation is also presented.}
       reportNumber  = "CERN-LHCC-2017-021",
       url           = "https://cds.cern.ch/record/2285585",
 }
+
+@article{Aaboud:2016leb,
+      author         = "Aaboud, Morad and others",
+      title          = "{Performance of the ATLAS Trigger System in 2015}",
+      collaboration  = "ATLAS",
+      journal        = "Eur. Phys. J.",
+      volume         = "C77",
+      year           = "2017",
+      number         = "5",
+      pages          = "317",
+      doi            = "10.1140/epjc/s10052-017-4852-3",
+      eprint         = "1611.09661",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2016-241",
+      SLACcitation   = "%%CITATION = ARXIV:1611.09661;%%"
+}
+
+@techreport{Collaboration:2257755,
+      author        = "Collaboration, ATLAS",
+      title         = "{Technical Design Report for the ATLAS Inner Tracker Strip
+                       Detector}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CERN-LHCC-2017-005. ATLAS-TDR-025",
+      month         = "Apr",
+      year          = "2017",
+      reportNumber  = "CERN-LHCC-2017-005",
+      url           = "https://cds.cern.ch/record/2257755",
+}
 @book{Apollinari:2284929,
       author        = "Apollinari G. and Béjar Alonso I. and Brüning O. and
                        Fessia P. and Lamont M. and Rossi L. and Tavian L.",
@@ -94,7 +124,14 @@ Collider begins operation is also presented.}
       year          = {},
       note          = {(Accessed on 01/05/2020)}
 }
-
+@misc{ATLCOMIT61:online,
+author = {},
+title = {ATL-COM-ITK-2019-045.pdf},
+howpublished = {\url{https://cds.cern.ch/record/2702738/files/ATL-COM-ITK-2019-045.pdf?}},
+month = {},
+year = {},
+note = {(Accessed on 01/27/2020)}
+}
 @article{uchiyama,
       author        = "内山和貴",
       title         = "{「HL-LHCに向けたシリコンピクセル検出器の雑音及び検出効率の研究」}",
