--- a/dthesis_template/inputs/Conclusion.tex
+++ b/dthesis_template/inputs/Conclusion.tex
@@ -1,7 +1,14 @@
 \chapter{2つの手法で行なった応答評価試験の比較}
-この章では，第4章，第5章で述べた，セルフトリガと外部トリガ，それぞれを用いた応答評価試験の結果から，それぞれの手法の比較を行う．
+この章では，第4章，第5章で述べた，セルフトリガと外部トリガ，それぞれを用いた応答評価試験の結果から，それぞれの手法の比較を行う．比較する点は3点である．
+\begin{itemize}
+\item 全トリガ数に対するヒットが存在したイベント数(\ref{sec:conc1}節)
+\item 品質評価を行うために必要な時間(\ref{sec:conc2}節)
+\item 全ヒット数に対する荷電粒子のヒット数(\ref{sec:conc3}節)
+\end{itemize}
+
 
 \section{全トリガ数に対するヒットが存在したイベント数}
+\label{sec:conc1}
 セルフトリガと外部トリガ，それぞれを用いた応答評価試験で得られた全トリガ数のうちのヒット数が存在したイベント数の分布を表\ref{tab:selfrcomp}，表\ref{tab:extrcomp}に示す．
 
 \begin{table}[h]
@@ -30,23 +37,25 @@
 
 セルフトリガで取得したデータは，83 \%のイベントにヒットが存在する一方で，外部トリガで取得したデータは，23 \%のイベントにしかヒットが存在しない．原理として，セルフトリガは荷電粒子がセンサを通過した信号由来でトリガを生成しているのに対し，外部トリガは，トリガシンチレータを荷電粒子が通過した信号由来でトリガを生成しているため，このようなヒットの存在率に差ができると考えられる．
 
-\section{平均の1ピクセルあたりのヒット数}
+\section{品質評価を行うために必要な時間}
+\label{sec:conc2}
 セルフトリガと外部トリガ，それぞれを用いた応答評価試験で得られた結果から求めた，平均の1ピクセルあたりのヒット数は以下のようになる．
 
 \begin{itemize}
-\item セルフトリガ：15.1 $\mathrm{Hits/pixel/30min}$\\
+\item セルフトリガ：15.1 $\mathrm{Hits/pixel/30min}$
 \item 外部トリガ：1.10 $\mathrm{Hits/pixel/3h}$
 \end{itemize}
 
 これより求められる，各ピクセル50 $\mathrm{Hits/pixe}$を得て，品質評価を行うために必要な時間は以下のようになる．
 \begin{itemize}
-\item セルフトリガ：100 $\mathrm{min}$\\
+\item セルフトリガ：100 $\mathrm{min}$
 \item 外部トリガ：6.25 $\mathrm{day}$
 \end{itemize}
 
 どちらも，実際2000個のモジュールに対して応答評価試験を行うことを考えると，大変長く，現実味のない値である．実際の試験では，外部トリガを用いた応答評価試験を行う予定であるが，時間を短縮するために，本論文で用いた4.8 $\mathrm{kBq}$の線源よりも1000倍強い放射能を持った線源を使用する必要があると考える．1000倍強い線源を使用することで，1モジュールあたり9分で応答評価試験が終えられると予測される．
 
 \section{全ヒット数に対する荷電粒子のヒット数}
+\label{sec:conc3}
 セルフトリガと外部トリガ，それぞれを用いた応答評価試験で得られた結果から求めた荷電粒子のヒット数の分布を表\ref{tab:selfpcomp}，表\ref{tab:extpcomp}に示す
 
 \begin{table}[h]
