--- a/dthesis_template/inputs/Conclusion2.tex
+++ b/dthesis_template/inputs/Conclusion2.tex
@@ -1,5 +1,8 @@
 \chapter{結論}
 ATLAS実験では，HL-LHC計画に向けて内部飛跡検出器のアップグレードが予定されている．そのアップグレードに伴い，ATLAS検出器の内部飛跡検出器は，受ける放射線量の増加，検出器のヒット占有率の増加などに対応するために，Inner Tracker(ITk)と呼ばれるシリコン検出器への総入れ替えが予定されている．総入れ替えのために，内部に用いるピクセルセンサモジュールの量産が必要である．量産されたモジュールは品質性能基準を達成するかを確認するために，様々な試験にかけられる．\par
 本論文では，この試験項目の1つであるモジュールの粒子線に対する応答評価試験を取り扱った．この試験は2つの手法があり，モジュールに粒子が入射した時の信号のタイミングでデータ取得を行うセルフトリガを用いた手法と，シンチレータを用いて，シンチレータに粒子が入射した時の信号のタイミングでデータ取得を行う外部トリガを用いた手法がある．本論文では，応答評価試験方法の確率のために必要なファームウェア，ソフトウェアを開発し，動作確認を行なった上で，2つの手法それぞれによるデータ取得を行った．\par
-その結果，セルフトリガによる応答評価試験では，30分間でヒットが存在したピクセルのうちの99.4 \%のピクセルが荷電粒子による信号を検出し，品質評価試験することが可能であった．しかし，セルフトリガの場合，センサのノイズで発行されたトリガで取得されたデータも多く，0.3 \%のピクセルはセンサからのノイズに対して有意な信号を検出することができなった．一方で，外部トリガを用いた応答評価試験では，1時間でヒットが存在したピクセルのうちの99.8 \%のピクセルが荷電粒子による信号を検出し，品質評価試験することが可能であった．センサのノイズでトリガが発行されることがなくなった一方で，粒子線からの荷電粒子がトリガシンチに吸収されてしまったり，トリガシンチを通過してもモジュールに当たらなかったりするため，トリガの数に対するヒットが存在したイベント数が大きく下がった．それを改善するためには，本論文で使用した線源よりも10倍ほど強い線源を用いれば，今回よりも短時間で効率よく応答評価試験が行えると考えた．
+その結果セルフトリガによる応答評価試験では，全トリガ数に対するヒットが存在したイベント数が87.0 \%と高かった．また，30分間の応答評価試験で得られた1ピクセルあたりの平均ヒット数は15.1 $\mathrm{Hits/pixel}$であり，これより，実際の品質評価を行うためには100 $\mathrm{min}$かかることが予測される．一方で，荷電粒子によるヒットデータが全ヒット数の17.9 \%と少ない．それに対して，外部トリガによる応答評価試験では，全トリガ数に対するヒットが存在したイベント数が30.3 \%と少なかった．また，3時間の応答評価試験で得られた1ピクセルあたりの平均ヒット数が1.10 $\mathrm{Hits/pixel}$であり，これより，実際に品質評価を行うためには6.25 $\mathrm{day}$かかることが予測される．\par
+これらのことより，取得されるデータの容量を考慮しないのであれば，セルフトリガでデータ取得を行なった方が，荷電粒子によるヒットを多く得ることができるが，少ないデータ容量で荷電粒子のヒットを得たい場合は，外部トリガの方がよいと考えられる．また，品質評価にかかる時間については，2000個のモジュールに対して行うことを考えると，セルフトリガの100 $\mathrm{min}$も，外部トリガの6.25 $\mathrm{day}$も，本論文の設置アップでは時間がかかりすぎだと考えられる．1モジュールあたりにかかる時間を10分以内に収めるためには，セルフトリガの場合は10倍強い線源を，外部トリガの場合は，1000倍強い線源を使用するのがよい．
+
+%その結果，セルフトリガによる応答評価試験では，30分間でヒットが存在したピクセルのうちの99.4 \%のピクセルが荷電粒子による信号を検出し，品質評価試験することが可能であった．しかし，セルフトリガの場合，センサのノイズで発行されたトリガで取得されたデータも多く，0.3 \%のピクセルはセンサからのノイズに対して有意な信号を検出することができなった．一方で，外部トリガを用いた応答評価試験では，1時間でヒットが存在したピクセルのうちの99.8 \%のピクセルが荷電粒子による信号を検出し，品質評価試験することが可能であった．センサのノイズでトリガが発行されることがなくなった一方で，粒子線からの荷電粒子がトリガシンチに吸収されてしまったり，トリガシンチを通過してもモジュールに当たらなかったりするため，トリガの数に対するヒットが存在したイベント数が大きく下がった．それを改善するためには，本論文で使用した線源よりも10倍ほど強い線源を用いれば，今回よりも短時間で効率よく応答評価試験が行えると考えた．
 
