--- a/dthesis_template/inputs/Detector.tex
+++ b/dthesis_template/inputs/Detector.tex
@@ -150,10 +150,10 @@ p型とn型の半導体が結合されると，接合部における大きなキ
   &=& 8.14 \times 10^4 \mathrm{eV}
 \end{eqnarray}
 
-また，電子-正孔対生成に必要なエネルギーは3.62 $\mathrm{eV}$であるから，生成され電子-正孔対の数は式\ref{eq:thr}のようになる．
+また，シリコンの場合電子-正孔対生成に必要なエネルギーは3.6 $\mathrm{eV}$ \cite{SMSze}であるから，生成され電子-正孔対の数は式\ref{eq:thr}のようになる．
 \begin{equation}
   \label{eq:thr}
-  E / 3.62 \mathrm{eV} = 22500
+  E / 3.6 \mathrm{eV} = 22500
 \end{equation}
 
 
@@ -194,17 +194,18 @@ HL-LHCのための新型シリコンピクセル検出器では，図\ref{fig:pi
 \label{sec:rd53a}
 この節では，モジュールを構成する要素の1つである集積回路(ASIC)について述べる．ピクセル検出器からの信号は，検出器に直接接続された電子回路で最初に処理される．この電気回路をフロントエンドエレクトロニクスと呼ぶ．この回路は，全て専用の信号読み出し用ASIC内に実装されている．そのため，フロントエンドASICと呼ぶこともあるが，以降ではASICと呼ぶ．この回路を用いて検出器からの微弱な電荷を受け取り，計測用のシステムに最適化した応答をするように信号をアンプ回路や波形整形回路などで調整する．さらに，コンピュータでの解析処理や，データの保存のためにアナログ信号をデジタル信号に変換する．\par
 RD53Aの主な機能は以下の3点である．
-本論文で用いたASIC・RD53AはHL-LHC ATLAS実験用に開発されたプロトタイプ版の新型ASICであり，前章で述べたような，高い放射線耐性と，高い位置分解能を達成する．以下に現行のATLAS検出器で用いられているASIC・FEI4とFEI3，プロトタイプ版新型ASIC・RD53Aの比較を示す．
 \begin{itemize}
-  \item 各ピクセルの電荷を読み出してデジタル変換を行う\\
-  \item トリガを受け取るまで，読み出した電荷のピクセル位置，ToT等の情報を保持する\\
+  \item 各ピクセルの電荷を読み出してデジタル変換を行う
+  \item トリガを受け取るまで，読み出した電荷のピクセル位置，ToT等の情報を保持する
   \item トリガを受け取り，読み出した電荷の情報を出力する
 \end{itemize}
+
+本論文で用いたASIC・RD53AはHL-LHC ATLAS実験用に開発されたプロトタイプ版の新型ASICであり，前章で述べたような，高い放射線耐性と，高い位置分解能を達成する．以下に現行のATLAS検出器で用いられているASIC・FEI4とFEI3，プロトタイプ版新型ASIC・RD53Aの比較を示す．
 
 \begin{table}[h]
   \centering
   \caption{現行のASIC2種と新型プロトタイプ版ASICの比較}
-  \begin{tabular} {|l|cc|c|} \hline
+  \begin{tabular} {l|cc|c} \hline
     ASIC名 & FEI3 & FEI4 & RD53A \\ \hline \hline
     ピクセルサイズ & 50 $\times$ 400 $\mathrm{\mu m^2}$ & 50 $\times$ 250 $\mathrm{\mu m^2}$ & 50 $\times$ 50 $\mathrm{\mu m^2}$ \\
     ピクセルのチャンネル数 & 18 $\times$ 160 & 80 $\times$ 336 & 400 $\times$ 192  \\ 
@@ -246,7 +247,7 @@ RD53Aはプロトタイプ版のため，Synchronous Frontend, Linear Frontend, 
 \label{fig:DiffFE}
 \end{figure}
 
-図\ref{fig:DiffFE}に示したように，Diff FEでは，RD53AのGR値である''DiffVthin1''と''DiffVthin2''で閾値を設定可能である．これらのGR値は，入力された信号(図\ref{fig:DiffFE}の信号1)と，それに対して反転増幅を行なった後の信号(図\ref{fig:DiffFE}の信号2)それぞれに作用するオフセット電圧である．Diff FEはこれらの信号の差動によって，出力信号を定義しているため，オフセットを変化させることで，閾値を調整することができる．また，GR値である''DiffLccEn''で図中のCfCtrlのスイッチのオンオフを，''DiffLcc''でLCC回路に印加する電圧を設定することができる．
+図\ref{fig:DiffFE}に示したように，Diff FEでは，RD53AのGR値である''DiffVthin1''と''DiffVthin2''で閾値を設定可能である．これらのGR値は，入力された信号(図\ref{fig:DiffFE}の信号$\textcircled{\scriptsize1}$)と，それに対して反転増幅を行なった後の信号(図\ref{fig:DiffFE}の信号$\textcircled{\scriptsize2}$)それぞれに作用するオフセット電圧である．Diff FEはこれらの信号の差動によって，出力信号を定義しているため，オフセットを変化させることで，閾値を調整することができる．また，GR値である''DiffLccEn''で図中のCfCtrlのスイッチのオンオフを，''DiffLcc''でLCC回路に印加する電圧を設定することができる．
 
 \subsection{RD53Aのデータ収集の仕組み}
 
@@ -257,7 +258,7 @@ RD53Aはプロトタイプ版のため，Synchronous Frontend, Linear Frontend, 
   \label{fig:RD53Aproc}
 \end{figure}
 
-図\ref{fig:RD53Aproc}にRD53Aのデータ収集の仕組みを示す．まず，Hitとされる信号(センサからの信号)はBinary in from FEから，Digital Injectionによる信号はCAL\_edgeから入力される．各ピクセルごとに設定されている''Enable''がオンの場合，そのピクセルのデータは図中のHit Disc. \& Counterに入る．ここでは，Hitを検出したピクセルの位置(Region Hit)と，40$\mathrm{MHz}$のBX Clockに合わせて数え上げられるToT値とLatency値が記録されていく．
+図\ref{fig:RD53Aproc}にRD53Aのデータ収集の仕組みを示す．まず，Hitとされる信号(センサからの信号)はBinary in from FEから，Digital Injectionによる信号はCAL\_edgeから入力される．各ピクセルごとに設定されている''Enable''がオンの場合，そのピクセルのデータは図中のHit Disc. \& Counterに入る．ここでは，Hitを検出したピクセルの位置(Region Hit)と，40$\mathrm{MHz}$のBX Clockに合わせて数え上げられるToT値が保持され，同時にLatency Timerが起動する．このLatency TimerはHit情報に関連づけられ，RD53Aがトリガを受け取るまで停止しない．そして，トリガを受け取った時に，プログラムされた定数Latency値に達したLatency Timerに関連づけられたヒットの情報を読み出す．ToTとLatencyについて説明する図を図\ref{fig:tot}に示す．
 
 \subsubsection*{Time over Threshold(ToT)}
 ToTとは，図\ref{fig:tot}で示すように，信号(Signal)が閾値(Threshold)を超えている間の時間を指す．
@@ -271,8 +272,6 @@ Latencyとは，図\ref{fig:tot}で示すように，トリガが入力されて
   \caption{信号が入力された時のToTとLatency}
   \label{fig:tot}
 \end{figure}
-
-
 
 \subsection{HitOR信号}
 RD53Aには，現行のFEI4に実装されているセルフトリガ機能がない代わりに，HitORというセンサに荷電粒子が入射したタイミングで，出力される信号が存在する．HitOR信号出力する仕組みについて説明する．図\ref{fig:RD53Aproc}において，各ピクセルで設定されているレジスタ''HitOr Enable''がオンの場合，Hit信号または擬似パルス信号が入射すると，Hit Disc. \& Counterに入るのと同時に図中右下のHitOR Outから信号が出力される．\par
@@ -293,11 +292,13 @@ RD53Aからは最終的に4つのHitOR信号が出力される．図\ref{fig:Hit
 量産されたモジュールは品質性能基準を達成するために，試験にかけられる．その試験項目の1つとして，本論文に関わる，粒子線に対する応答評価試験が存在する．
 
 \subsection{粒子線に対する応答評価試験の意義}
-HL-LHC ATLAS実験に向けたピクセル検出器量産に際して，全ての検出器モジュールに対して，品質管理のための試験を行う．この試験項目の1つとして，粒子線に対する応答評価試験が設けられている．前章でも述べたように，ピクセル検出器の各チャンネルとASICはバンプボンディングという手法で接続されている．このバンプボンディングに異常がないかどうかを確認するための試験が，ソーススキャンである．\par
+HL-LHC ATLAS実験に向けたピクセル検出器量産に際して，全ての検出器モジュールに対して，品質管理のための試験を行う．この試験項目の1つとして，粒子線に対する応答評価試験が設けられている．前節でも述べたように，ピクセル検出器の各チャンネルとASICはバンプボンディングという手法で接続されている．このバンプボンディングに異常がないかどうかを確認するための試験が，粒子線に対する応答評価試験である．\par
+応答評価試験による品質評価の基準は，全てのピクセルに対して荷電粒子によるヒットが50 $\mathrm{Hits/pixel}$となることである．\cite{ATLCOMIT61:online}
 
 \subsection{応答評価試験の手法}
-応答評価試験には，主に2種類の手法がある．1つは，センサに荷電粒子が入射した時の信号を取得したタイミングでデータ取得を行う，セルフトリガと呼ばれる手法．もう1つは，センサの上にシンチレータ，その上に粒子線源を設置し，シンチレータに粒子線が入射した時の信号を取得したタイミングでデータ取得を行う手法である．今回はこれら2種類の手法を用いて応答評価試験を行い，どのような試験結果の振る舞いがなされるかの検証を行なった．\par
+応答評価試験では，ATLASのトリガシステムのように，興味ある事象を選んでトリガをかける．この興味のある事象を選んでトリガをかける手法は，2つ存在する．1つは，センサに荷電粒子が入射した時の信号を取得したタイミングでデータ取得を行う，セルフトリガと呼ばれる手法．もう1つは，センサの上にシンチレータ，その上に粒子線源を設置し，シンチレータに粒子線が入射した時の信号を取得したタイミングでデータ取得を行う手法である．\par
+今回はこれら2種類の手法を用いて応答評価試験を行い，どのような試験結果の振る舞いがなされるかの検証を行なった．\par
 %YARRソフトウェアには，外部トリガスキャンという機能が実装されているため，今回はこの外部トリガにHitOR信号を用いた手法をセルフトリガ，シンチレータに粒子線が入射した時の信号を用いた手法を外部トリガと呼ぶ．
 
 \subsection{本研究の目的}
-本研究では，シリコンピクセルセンサが接続されたHL-LHC ATLAS実験用新型ASIC搭載モジュールを用いて，2種類の手法で行なったの粒子線に対する応答評価試験結果について報告する．
+本研究では，シリコンピクセルセンサが接続されたHL-LHC ATLAS実験用新型ASIC搭載モジュールを用いて，2種類の手法で行なったの粒子線に対する応答評価試験結果についての比較を行なった．
