--- a/dthesis_template/inputs/Introduction.tex
+++ b/dthesis_template/inputs/Introduction.tex
@@ -1,5 +1,5 @@
 \chapter*{序論}
-Large Hadron Collider(LHC)は欧州原子核研究機構(CERN)に設置された，重心系エネルギー13TeVの世界最大の陽子陽子衝突型の粒子加速器である．LHCの4つの衝突点のうちの1つに設置されたATLAS検出器を用いて，素粒子標準模型の精密測定および，それを超えた物理の探索を行なっている実験がATLAS実験である．2026年の開始を目指して，LHCの高輝度計画・High-Luminosity LHC(HL-LHC)計画が進められている．LHCのルミノシティを向上させることで，統計量が増えるため，超対称性などの様々な模型が予想する新粒子への感度が向上し，重い粒子の探索が可能になることが期待されている．このHL-LHC計画に伴い，ATLAS検出器の内部飛跡検出器は，受ける放射線量の増加，検出器のヒット占有率の増加などに対応するために，Inner Tracker(ITk)と呼ばれるシリコン検出器への総入れ替えが予定されている．\par
-この総入れ替えのために，内部に用いるピクセルセンサモジュールを世界で約6800個制作する必要がある．日本グループはそのうちの約2000個を担当する予定である．ここでは，フレキシブル(Flex)基板，フロントエンド集積回路(ASIC)，シリコンピクセルセンサの3要素で構成された検出器をピクセルセンサモジュールと呼ぶ．センサとASICはバンプボンディングと呼ばれる手法，ASICとFlex基板はワイヤボンディングと呼ばれる手法で接続されている．量産されたモジュールは品質性能基準を達成しているか確認するために，様々な試験にかけられる．\par
-本研究では，この試験項目の1つである，粒子線に対する応答評価試験を取り扱った．この試験は，ASICとセンサ間のバンプボンディングの部分に異常がないかを確認する試験である．HL-LHCのために開発されたASICのピクセルサイズは$50\times50 \mathrm{\mu m^2}$で，ピクセルセンサの信号が電極を通して個別にASICのピクセルで処理されるため，このバンプボンディングに異常があると，信号を伝えることができず，正常なデータを取得することができない．この試験には2つの手法があり，モジュールに粒子が入射した時の信号のタイミングでデータ取得を行うセルフトリガと呼ばれる手法と，シンチレータを用いて，シンチレータに粒子が入射した時の信号のタイミングでデータ取得を行う外部トリガと呼ばれる手法がある．本研究では，応答評価試験方法の確立のために必要なファームウェア，ソフトウェアを開発した上で，粒子線に対する応答評価試験のデータを2つの手法で取得し，実際に応答評価試験を行うことができるかどうかの確認・考察，2つの手法それぞれの利点欠点を比較した．\par
+Large Hadron Collider(LHC)は欧州原子核研究機構(CERN)に設置された，重心系エネルギー13TeVの世界最大の陽子陽子衝突型の粒子加速器である．LHCの4つの衝突点のうちの1つに設置されたATLAS検出器を用いて，素粒子標準模型の精密測定および，それを超えた物理の探索を行なっている実験がATLAS実験である．また，2026年の開始を目指して，LHCの高輝度計画・High-Luminosity LHC(HL-LHC)計画が進められている．LHCのルミノシティを向上させることで，統計量が増えるため，超対称性などの様々な模型が予想する新粒子への感度が向上し，重い粒子の探索が可能になることが期待されている．このHL-LHC計画に伴い，ATLAS検出器の内部飛跡検出器は，受ける放射線量の増加，検出器のヒット占有率の増加などに対応するために，Inner Tracker(ITk)と呼ばれるシリコン検出器への総入れ替えが予定されている．\par
+この総入れ替えのために，内部に用いるピクセルセンサモジュールを世界で約6800個制作する必要があり，日本グループはそのうちの約2000個を担当する予定である．ここで，フレキシブル(Flex)基板，フロントエンド集積回路(ASIC)，シリコンピクセルセンサの3要素で構成された検出器をピクセルセンサモジュールと呼ぶ．センサとASICはバンプボンディングと呼ばれる手法で，ASICとFlex基板はワイヤボンディングと呼ばれる手法で接続されている．量産されたモジュールは品質性能基準を達成しているか確認するために，様々な試験にかけられる．\par
+本研究では，この試験項目の1つである，粒子線に対する応答評価試験を取り扱った．この試験は，ASICとセンサ間のバンプボンディングの部分に異常がないかを確認する試験である．HL-LHCのために開発されたASICのピクセルサイズは$50\times50 \mathrm{\mu m^2}$で，ピクセルセンサの信号は電極を通して個別にASICのピクセルで処理されるため，このバンプボンディングに異常があると，信号を伝えることができず，正常なデータを取得することができない．そのため，この応答評価試験はモジュールの品質評価に大変重要である．この試験には2つの手法があり，モジュールに粒子が入射した時の信号のタイミングでデータ取得を行うセルフトリガと呼ばれる手法と，シンチレータを用いて，シンチレータに粒子が入射した時の信号のタイミングでデータ取得を行う外部トリガと呼ばれる手法がある．本研究では，応答評価試験方法の確立のために必要なファームウェア，ソフトウェアを開発した上で，粒子線に対する応答評価試験のデータを2つの手法で取得し，実際に応答評価試験を行うことができるかどうかの確認・考察，2つの手法それぞれの利点欠点を比較した．\par
 本論文では，第1章で，現在のLHC ATLAS実験と2024年以降に予定されているHL-LHC計画に伴うATLAS検出器のアップグレードについて，第2章で，アップグレードに伴うモジュールの量産と，モジュールの構成について，第3章で，応答評価試験をするにあたって作成したファームウェアの動作確認の様子，第4章で，セルフトリガによる応答評価試験，第5章で，外部トリガによる応答評価試験，第6章で，2つの手法で取得したデータからわかるそれぞれの利点欠点比較を述べている．
