--- a/dthesis_template/inputs/Selftrig.tex
+++ b/dthesis_template/inputs/Selftrig.tex
@@ -150,7 +150,7 @@ ASICのあるピクセルが信号を検知すると，そのピクセルが40 $
   \begin{tabular} {l|ccc} \hline
     トリガ生成方法 & ランダムトリガ & セルフトリガ(線源なし) & セルフトリガ(線源あり) \\ \hline \hline
     ヒット数 & 1432633 & 3440511 & 3503191\\
-    トリガ数 & $6 \time 10^7$ & 4193685 & 4056311 \\ \hline
+    トリガ数 & $6 \times 10^7$ & 4193685 & 4056311 \\ \hline
   \end{tabular}
   \label{tab:self}
 \end{table}
